Bug 439148 - GUI is not shown during comparing of folders when Kdiff3 launched from command line.
Summary: GUI is not shown during comparing of folders when Kdiff3 launched from comman...
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.9.2
Platform: Microsoft Windows Microsoft Windows
: NOR critical
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-25 11:54 UTC by Dmitry.Sokolov
Modified: 2023-07-22 18:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry.Sokolov 2021-06-25 11:54:26 UTC
SUMMARY
GUI is not shown during comparing of folders when Kdiff3 launched from command line.

STEPS TO REPRODUCE
1. Launch kdiff3 to compare folders with a lot of files `kdiff3 qt6.1 qt6.2`

OBSERVED RESULT
Noting is shown. It looks like kdiff3 is not launched at all.


EXPECTED RESULT
Dialog with Progress is shown.


SOFTWARE/OS VERSIONS
Windows: 10 21H1
Comment 1 nyanpasu64 2023-01-13 23:57:32 UTC
Not OP nor maintainer, but I cannot reproduce on Version 1.10.0, which seems to have rewritten a lot of the directory diff code. Running `kdiff3 folder1 folder2` shows a folder diff view as expected. Can you verify?
Comment 2 michael 2023-01-22 23:34:11 UTC
Moving to needs info as the final result window should indeed show. Are you not even seeing this for short files. I ask because kdiff3 has known situation where it fails to show the progress GUI but runs just the same if launched via context menu in linux.
Comment 3 Dmitry.Sokolov 2023-01-27 16:54:12 UTC
Using https://download.kde.org/stable/kdiff3/kdiff3-1.10.0-windows-cl-64.exe

Still seeing this bug. I.e. when launching "kdiff3.exe folder1 folder2" for large folders the progress GUI is not shown at all. And after some minutes the main window appears.
Comment 4 michael 2023-01-30 22:07:15 UTC
Git commit 4525aed976366f113a0e57b09b3decba51a1ea25 by Michael Reeves.
Committed on 30/01/2023 at 22:06.
Pushed by mreeves into branch 'master'.

Show gui before starting comparison
FIXED-IN:1.10.1

M  +34   -34   src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/commit/4525aed976366f113a0e57b09b3decba51a1ea25
Comment 5 michael 2023-01-30 22:08:36 UTC
Git commit 7c4e929b2242effa9e795aa2443b645ed0388219 by Michael Reeves.
Committed on 30/01/2023 at 22:07.
Pushed by mreeves into branch '1.10'.

Show gui before starting comparison
FIXED-IN:1.10.1
(cherry picked from commit 1287151bfc7e0c9c3c5a3b029091a464aebf3bbf)

M  +34   -34   src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/commit/7c4e929b2242effa9e795aa2443b645ed0388219
Comment 6 Dmitry.Sokolov 2023-07-20 17:56:11 UTC
Still seeing this bug in https://mirror.yandex.ru/mirrors/ftp.kde.org/stable/kdiff3/kdiff3-1.10.5-windows-x86_64.exe
Comment 7 Dmitry.Sokolov 2023-07-20 18:00:09 UTC
Sorry, actually, there is a crash when running

    kdiff3.exe folder1 folder2

Submit another bug?
Comment 8 michael 2023-07-22 18:43:07 UTC
Yes. Playing catch up right now.