Show gui before starting comparison

BUG:439148
FIXED-IN:1.10.1
(cherry picked from commit 1287151bfc7e0c9c3c5a3b029091a464aebf3bbf)